--- a/codemods/fastify/v5/replace-hardcoded-url-in-hasroute/.codemodrc.json
+++ b/codemods/fastify/v5/replace-hardcoded-url-in-hasroute/.codemodrc.json
@@ -1,9 +1,16 @@
 {
   "$schema": "https://codemod-utils.s3.us-west-1.amazonaws.com/configuration_schema.json",
-  "version": "1.0.0",
-  "private": false,
   "name": "fastify/5/replace-hardcoded-url-in-hasroute",
+  "version": "1.0.1",
   "engine": "jscodeshift",
+  "private": false,
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.vue"
+  ],
   "applicability": {
     "from": [
       [
@@ -25,6 +32,7 @@
       ]
     ]
   },
+  "arguments": [],
   "meta": {
     "tags": [
       "fastify",
@@ -32,12 +40,5 @@
       "migration"
     ],
     "git": "https://github.com/manishjha-04/codemod-hub/tree/main/codemods/fastify/v5/replace-hardcoded-url-in-hasroute"
-  },
-  "include": [
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.vue"
-  ]
+  }
 }
