--- a/codemods/styledictionary/4/migration-recipe/.codemodrc.json
+++ b/codemods/styledictionary/4/migration-recipe/.codemodrc.json
@@ -1,36 +1,16 @@
 {
   "$schema": "https://codemod-utils.s3.us-west-1.amazonaws.com/configuration_schema.json",
   "name": "styledictionary/4/migration-recipe",
-  "version": "1.0.4",
-  "private": false,
+  "version": "1.0.5",
   "engine": "recipe",
-  "names": [
-    "styledictionary/4/asynchronous-api",
-    "styledictionary/4/asynchronous-api-file-headers",
-    "styledictionary/4/format-helpers",
-    "styledictionary/4/formatting-options",
-    "styledictionary/4/hook-api-actions",
-    "styledictionary/4/hook-api-file-header",
-    "styledictionary/4/hook-api-filters",
-    "styledictionary/4/hook-api-formats",
-    "styledictionary/4/hook-api-parsers",
-    "styledictionary/4/hook-api-preprocessors",
-    "styledictionary/4/hook-api-transform",
-    "styledictionary/4/hook-api-transform-groups",
-    "styledictionary/4/instantiating-style-dictionary",
-    "styledictionary/4/logging",
-    "styledictionary/4/module-common-js",
-    "styledictionary/4/reference-utils",
-    "styledictionary/4/type",
-    "styledictionary/4/updated-and-removed-transforms"
+  "private": false,
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.vue"
   ],
-  "meta": {
-    "tags": [
-      "migration",
-      "styledictionary"
-    ],
-    "git": "https://github.com/manishjha-04/codemod-hub/tree/main/codemods/styledictionary/4/migration-recipe"
-  },
   "applicability": {
     "from": [
       [
@@ -52,11 +32,32 @@
       ]
     ]
   },
-  "include": [
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.vue"
+  "arguments": [],
+  "meta": {
+    "tags": [
+      "migration",
+      "styledictionary"
+    ],
+    "git": "https://github.com/manishjha-04/codemod-hub/tree/main/codemods/styledictionary/4/migration-recipe"
+  },
+  "names": [
+    "styledictionary/4/asynchronous-api",
+    "styledictionary/4/asynchronous-api-file-headers",
+    "styledictionary/4/format-helpers",
+    "styledictionary/4/formatting-options",
+    "styledictionary/4/hook-api-actions",
+    "styledictionary/4/hook-api-file-header",
+    "styledictionary/4/hook-api-filters",
+    "styledictionary/4/hook-api-formats",
+    "styledictionary/4/hook-api-parsers",
+    "styledictionary/4/hook-api-preprocessors",
+    "styledictionary/4/hook-api-transform",
+    "styledictionary/4/hook-api-transform-groups",
+    "styledictionary/4/instantiating-style-dictionary",
+    "styledictionary/4/logging",
+    "styledictionary/4/module-common-js",
+    "styledictionary/4/reference-utils",
+    "styledictionary/4/type",
+    "styledictionary/4/updated-and-removed-transforms"
   ]
 }
